Verificación por token. Añadido campo correcta a la respuesta.

--- a/src/main/resources/templates/salaEspera.html
+++ b/src/main/resources/templates/salaEspera.html
@@ -24,7 +24,7 @@
     		<h5 id="sinParticipantes">Sin participantes, aún.</h5>
 	    	<div class="row participantes">
 	    	</div>
-	    	<form id="comenzarReto" action="comenzar-reto" th:if="${usuario == null}" method="POST" style="display: none;">
+	    	<form id="comenzarReto" action="comenzar-reto" th:if="${usuario.rol == T(tfg.quiz.objetoNegocio.Rol).Profesor}" method="POST" style="display: none;">
 				<button class="btn btn-azul btn-lg" onclick="this.parentNode.submit()">Comenzar Reto</button>
 			</form>
 			
@@ -37,7 +37,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
   	
-  	<script th:if="${usuario != null}">
+  	<script th:if="${usuario.rol == T(tfg.quiz.objetoNegocio.Rol).Alumno}">
   		setInterval(function(){
   			$.ajax({
   				type: "GET",
