--- a/src/main/resources/templates/resolverReto.html
+++ b/src/main/resources/templates/resolverReto.html
@@ -143,7 +143,7 @@
     	}
     	
     	function respuesta(idOpcionElegida, correcta) {
-    		enviarResultados(idOpcionElegida, tiempoPregunta - tiempoActual);
+    		enviarResultados(idOpcionElegida, tiempoPregunta - tiempoActual, correcta);
     		pararCronometro();
     		$("#" + idPregunta).css({"display": "none"});
     		
@@ -158,7 +158,7 @@
 	    	document.getElementById("aciertos").innerHTML = "Aciertos: " + respuestasCorrectas + " de " + numPreguntas;
 	    }
     	
-    	function enviarResultados(idOpcionElegida, tiempo) {		    	
+    	function enviarResultados(idOpcionElegida, tiempo, correcta) {		    	
 	    	$.ajax({
 	  			type: "POST",
 	  			url: "guardar-respuesta",
@@ -166,6 +166,7 @@
 	  			data: {"idOpcionElegida": idOpcionElegida,
 	  				"idPregunta": idPregunta,
 	  				"tiempoTotal": tiempo,
+	  				"correcta": correcta,
 	  				"idUsuario": $.cookie("idUsuario")
 	  			}
 	  		});
